--- a/proxyserver/Client/Makefile
+++ b/proxyserver/Client/Makefile
@@ -15,9 +15,9 @@ TEST_IN_DIR = $(SRC_DIR)/Test
 TEST_OUT_DIR = ./Test
 SHELL_DIR = ./shell
 DOC_OUT_DIR = ./DOC_OUTPUT
-CC = g++ -O2 -g
+CC = g++ -O0 -g
 
-all : client 
+all : client
 
 test : 
 
@@ -30,3 +30,6 @@ server : server.cpp
 
 client : client.cpp
 	${CC} $^ -o $@ -lpthread
+
+test : client
+	./client localhost 9000 1 4 1 -proxy localhost 8000
